fix annoying overflow

--- a/stylesheet/_base.scss
+++ b/stylesheet/_base.scss
@@ -3,10 +3,11 @@ $galacticBlue: #5B58FF;
 
 html {
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;  
+  height: 100%;
 }
 
-*, *:before, *:after {
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
@@ -15,6 +16,12 @@ body {
   margin: 0;
   padding: 0;
   color: $gray;
+  overflow-x: hidden;
+}
+
+.splash {
+  margin: 0;
+  padding: 0;
 }
 
 .areas-list {
@@ -23,7 +30,7 @@ body {
   flex-wrap: wrap;
   align-items: center;
   list-style: none;
-  padding: 0;
+  padding: 0;    
 
   * {
     margin: 0;
@@ -42,9 +49,9 @@ body {
 }
 
 .container {
-  width: 90vw;
+  width: 100vw;
   margin: 0 auto;
-  padding: 0;    
+  padding: 0 1.5rem;    
 
   &__secondary-header {
     font-weight: 500;
@@ -72,37 +79,40 @@ body {
   }    
 }
 
-.work__container-work {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(auto-fill, minmax(150pxm 1fr));
-  
-  &__link {
-    padding: 15px;
-    text-decoration: none;
+.work__container {
+  max-width: 768px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 2rem;
+  padding-right: 2rem;
 
-    &__wrapper {
+  &__wrapper {
+   position: relative;
+   display: block;  
+   font-size: 0; //To change in code
+   line-height: 0; 
+
+    .project-title {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 10;
+    }
+    
+    .image-placeholder {      
+      overflow: hidden;
+      line-height: 0;
 
       &__image {
-        display: block;
-        height: auto;
-        width: 100%;               
-      }
-
-      &__content {
-        z-index: 10;
-        position: relative;
         width: 100%;
-
-        &__header {
-          text-align: center;
-          color: $gray;
-          text-decoration: none;                    
-          font-weight: 500;          
-        }
+        height: auto;
       }
     }
   }
+}
+
+.project-title h3 {
+  position: absolute;  
 }
 
 .skills__container-skills {
